# projects-spinOff

./: CMakeLists.txt  main.cpp  spinOff.dist
FFT_wrap/: uint_util.hcu
Science/: MRI.cu  MRI.hcu  MRIModule.cpp  MRIModule.h  float_util.hcu
report/: Makefile  NOTES  abstract.tex  bloch.tex  conclusion.tex  future.tex  imaging.tex  implementation.tex  intro.tex  introduction.tex  master.tex  mri.tex  outline.tex  preamble.tex  previous.tex  references.bib  report.tex  running.tex
